--- a/gb/23/12/30/n14147327.md
+++ b/gb/23/12/30/n14147327.md
@@ -19,17 +19,19 @@
 <p>来到海外我真正体会到言论自由就像空气一样珍贵！ 什么人权啊，生存权啊，在国内从没听说过。? 我父亲晚年经常说：“共产党的政策就是口袋政策，先骗你进去，等你进去了，口一扎，想怎么整治你就怎么整治你。”让人活的没有一点点尊严，这就是诛心的效果吧。</p>
 <p>责任编辑：文风</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068340.md#1">贾平讲故事：疯狂的年代</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14106304.md#1">贾平讲故事：我的“后爸爸”那些事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/22/n14122012.md#1">贾平讲故事：叛逆的时代 ——文革、上山下乡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144257.md#1">多伦多2023年阅读量最多地产新闻：产权欺诈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145087.md#1">安省能源委员会提高新房成本 能源厅长否决</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145076.md#1">劫车未遂 安省男子面临系列指控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144203.md#1">安省租客租住了“非法”单元 该怎么办？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145083.md#1">安省核废料地下封存选址 明年底确定</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145082.md#1">多伦多动物园回收旧手机 助拯救大猩猩</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14145074.md#1">安省今年酒驶指控逾万 近四百人死于交通事故</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/28/n10747812.md#1" target="_blank">东欧剧变第一国 波兰抛弃共产主义之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
