--- a/gb/23/12/30/n14147322.md
+++ b/gb/23/12/30/n14147322.md
@@ -48,7 +48,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
