--- a/gb/23/12/30/n14147345.md
+++ b/gb/23/12/30/n14147345.md
@@ -26,7 +26,7 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/12/11/n8581915.md#1" target="_blank">76岁中医求道40年终获至宝 发乌黑身如燕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/26/n10250277.md#1" target="_blank">中共淫乱的前生今世（7）高危的情妇们</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
